// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button should render correctly 1`] = `
<button
  class="btn"
>
  test
</button>
`;

exports[`Button should render correctly disabled state 1`] = `
<button
  class="btn"
  disabled=""
>
  test
</button>
`;
